Improving base template, add its assets

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Welcome to Symfony!</title>
-    </head>
-    <body>
-        <h1>Coucou</h1>
+{% extends 'base.html.twig' %}
 
-        <ul id="navigation">
-        </ul>
-    </body>
-</html>
+{% block title %}
+    Welcome on this External link visit couter
+{% endblock %}
+
+{% block body %}
+<article>
+    What is this thing?
+    <p>Test</p>
+    <p>Test</p>
+    <p>Test</p>
+    <p>Test</p>
+    <p>Test</p>
+</article>
+{% endblock %}
