--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,7 +7,8 @@ body {
 }
 .overlay-bg{
     background-color: rgba(236, 236, 236, 0.8);
-    height:100vh;
+    min-height:100vh;
+    padding: 20px;
 }
 .page-content{
     max-width: 1140px;
@@ -44,7 +45,6 @@ article{
 	font-size: 17px;
     padding: 25px;
     margin-top:50px;
-	margin-bottom: 10px;
 	border-radius: 10px; 
 	margin-left:auto;
 	margin-right:auto;
