--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,11 +6,20 @@
 
 {% block body %}
 <article>
-    What is this thing?
-    <p>Test</p>
-    <p>Test</p>
-    <p>Test</p>
-    <p>Test</p>
-    <p>Test</p>
+    <h2>Welcome on this external link visit counter!</h2>
+    <p>
+        Analyse your digital communication impact without a single line of code. 
+    </p>
+
+    <h3>Why use it?</h3>
+    <ul>
+        <li>It is completely free and opensource.</li>
+        <li>No data analysis.</li>
+        <li>It has a really simple interface.</li>
+    </ul>
+    <div class="d-flex justify-content-center mt-5">
+        <button type="button" class="btn" onclick='window.location.href="{{ path("watched_link.create") }}"'>Get Started</button>
+        <button type="button" class="btn" onclick='window.location.href="{{ path("about") }}"'>Documentation</button>
+    </div>
 </article>
 {% endblock %}
