--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
             <div class="page-content">
                 <nav>
                     <div>
-                        <h1>External link visit counter</h1>
+                        <h1>Countext</h1>
                     </div>
                     <div>
                         <a href="{{ path('home') }}">Home</a>
