--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -16,10 +16,11 @@
         <li>It is completely free and opensource.</li>
         <li>No data analysis.</li>
         <li>It has a really simple interface.</li>
+        <li>You can participate by reporting asking for features and reporting bugs.</li>
     </ul>
     <div class="d-flex justify-content-center mt-5">
-        <button type="button" class="btn" onclick='window.location.href="{{ path("watched_link.create") }}"'>Get Started</button>
-        <button type="button" class="btn" onclick='window.location.href="{{ path("about") }}"'>Documentation</button>
+        <button type="button" class="btn home-page-button" onclick='window.location.href="{{ path("watched_link.create") }}"'>Get Started</button>
+        <button type="button" class="btn home-page-button" onclick='window.location.href="{{ path("about") }}"'>Documentation</button>
     </div>
 </article>
 {% endblock %}
