Correcting english mistakes

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Welcome on this External link visit couter
+    Welcome on countext
 {% endblock %}
 
 {% block body %}
 <article>
-    <h2>Welcome on this external link visit counter!</h2>
+    <h2>Welcome on this external link visit counter !</h2>
     <p>
         Analyse your digital communication impact without a single line of code. 
     </p>
 
     <h3>Why use it?</h3>
     <ul>
-        <li>It is completely free and opensource.</li>
-        <li>No data analysis.</li>
-        <li>It has a really simple interface.</li>
-        <li>You can participate by reporting asking for features and reporting bugs.</li>
+        <li>It is completely free and opensource</li>
+        <li>No data analysis</li>
+        <li>It has a really simple interface</li>
+        <li>You can participate by reporting asking for features and reporting bugs</li>
     </ul>
     <div class="d-flex justify-content-center mt-5">
         <button type="button" class="btn home-page-button" onclick='window.location.href="{{ path("watched_link.create") }}"'>Get Started</button>
