--- a/templates/WatchedLink/create.html.twig
+++ b/templates/WatchedLink/create.html.twig
@@ -20,7 +20,7 @@
         <input type="url" name="src-url" class="form-control">
         <br>
 
-        <label for="dest-url">Detination URL</label>
+        <label for="dest-url">Destination URL</label>
         <input type="url" name="dest-url" class="form-control">
         <br>
 
