--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,9 +14,10 @@
     <h3>Why use it?</h3>
     <ul>
         <li>It is completely free and opensource</li>
+        <li>It is account-free</li>
         <li>No data analysis</li>
         <li>It has a really simple interface</li>
-        <li>You can participate by reporting asking for features and reporting bugs</li>
+        <li>You can participate by asking for features and reporting bugs</li>
     </ul>
     <div class="d-flex justify-content-center mt-5">
         <button type="button" class="btn home-page-button" onclick='window.location.href="{{ path("watched_link.create") }}"'>Get Started</button>
