Add script in WatchedLink/index

--- a/templates/WatchedLink/index.html.twig
+++ b/templates/WatchedLink/index.html.twig
@@ -23,3 +23,7 @@
     </article>
     {% endfor %}
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset("js/searchBar.js") }}"></script>
+{% endblock %}
