Adapt search bar to encore

--- a/templates/WatchedLink/index.html.twig
+++ b/templates/WatchedLink/index.html.twig
@@ -25,5 +25,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset("js/searchBar.js") }}"></script>
+    {{ encore_entry_script_tags('watchedLink') }}
 {% endblock %}
