Remove css hardlinks to comply with encore's philosophy

--- a/templates/WatchedLink/index.html.twig
+++ b/templates/WatchedLink/index.html.twig
@@ -4,6 +4,10 @@
     Welcome on this External link visit couter
 {% endblock %}
 
+{% block stylesheets %}
+    {{ encore_entry_link_tags('watchedLink') }}    
+{% endblock %}
+
 {% block body %}
     
     <!-- Search bar -->
